--- a/CodeEditorSpring/src/main/resources/application.properties
+++ b/CodeEditorSpring/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=CodeEditorSpring
 server.port=9090
+websocket.port=8080
 spring.datasource.url=jdbc:mysql://localhost/code
 spring.datasource.username=root
 spring.datasource.password=1234
